- fixed a bug where some file formats would not be detected correctly if the file name was given through a path.
- fixed a bug where ionic shells would be lost in mode "--merge".
- fixed a bug where ionic shells would not be read from Atomsk binary files (*.atsk).
- fixed a bug where atom electric charges would not be read from LAMMPS data files (*.lmp).
- fixed a bug where the option "-sort" would not sort the selection mask along with atoms.
- fixed a bug where the compliance tensor would not be properly inverted to give the stiffness tensor in option "-properties".
- when no comment exists, the auto-generated comment that appears in the output file now contains the user name, and the date is now written with the ISO format (yyyy-mm-dd hh:mm:ss).




beta 0.7.6 (28 March 2014)
--------------------------
- fixed a major issue that was slowing down the writing of files in the following formats: CIF, IMD, LAMMPS data files, MBPP, Quantum Espresso Pwscf files, Siesta, VASP POSCAR files, and XYZ files. Writing files in these formats should be much faster, especially for large systems.
- fixed a minor bug in the reading of comments from Atomeye CFG files.


beta 0.7.5 (15 March 2014)
--------------------------
- fixed a bug that prevented to read some atoms in some CIF files. Thanks to P. Bonfa' (Uni. Parma, Italy) for pointing out this bug.
- fixed a bug that prevented to read some CFG files.
- fixed a bug that prevented to read some LAMMPS custom files (*.lmc).


beta 0.7.4 (20 Feb. 2014)
-------------------------
- fixed a bug where the force on the first atom would always be zero when reading a file in XSF format.
- fixed a bug where atoms would not be properly removed if they were at the exact same position in option "-remove-doubles". Thanks to S. Ritterbex (UMET, Lille, France) for pointing out this bug.


beta 0.7.3 (01 Feb. 2014)
-------------------------