@@ -234,7 +234,7 @@ deform x 3% 0.33<br/>
 
 <li><a href="#" id="devcloc" class="showLink" onclick="showHide('devcloc');return false;"><strong>How many lines of code does the program count?</strong></a></li>
 
-<div id="devcloc-show" class="more"><p>As of version Beta 0.8 <code>atomsk</code> counts about 24,500 lines of code.</p></div>
+<div id="devcloc-show" class="more"><p>As of version Beta 0.8 <code>atomsk</code> counts about 27,000 lines of code, and about 17,000 lines of comments.</p></div>
 
 
 <li><a href="#" id="devgui" class="showLink" onclick="showHide('devgui');return false;"><strong>Will a graphical user interface (GUI) be added?</strong></a></li>
