@@ -15,7 +15,7 @@
 
 <h4>Purpose</h4>
 
-<p><code>Atomsk</code> is a command-line program that aims at creating, manipulating, and converting atomic systems. It supports many file formats, among which LAMMPS, VASP, Quantum Espresso, Atomeye CFG format, and xCrySDen XSF format (see the <a href="./formats.html">list of supported formats</a>), which makes it easy to convert files for <em>ab initio</em> calculations, classical potential simulations, or visualization. Additionnaly <code>atomsk</code> can also perform some simple transformations of atomic positions (thanks to the many <a href="./options.html">options</a>), like creating supercells, cutting crystal planes, applying stress, or inserting dislocations.</p>
+<p><code>Atomsk</code> is a command-line program that aims at creating, manipulating, and converting atomic systems, for the purpose of <em>ab initio</em> calculations, classical potential simulations, or visualization. It supports many file formats, among which LAMMPS, VASP, Quantum Espresso, Atomeye CFG format, and xCrySDen XSF format (see the <a href="./formats.html">list of supported formats</a>). Additionnaly <code>atomsk</code> can also perform some simple transformations of atomic positions (thanks to the many <a href="./options.html">options</a>), like creating supercells, cutting crystal planes, applying stress, or inserting dislocations.</p>
 
 <p>Note however that this program is <em>not</em> meant to prepare all files, nor set all simulation parameters, for any particular purpose. In most cases <code>atomsk</code> will only produce a draft file containing atom positions, and that will need editing before running a simulation.</p>
 
