@@ -242,7 +242,7 @@ deform x 3% 0.33<br/>
 
 <li><a href="#" id="devcloc" class="showLink" onclick="showHide('devcloc');return false;"><strong>Combien de lignes de codes contient le code source ?</strong></a></li>
 
-<div id="devcloc-show" class="more"><p>Dans sa version Beta 0.8 <code>atomsk</code> comporte environ 24 500 lignes de code.</p></div>
+<div id="devcloc-show" class="more"><p>Dans sa version Beta 0.8 <code>atomsk</code> comporte environ 27 000 lignes de code, et 17 000 lignes de commentaires.</p></div>
 
 
 <li><a href="#" id="devgui" class="showLink" onclick="showHide('devgui');return false;"><strong>Y aura-t-il une interface graphique (GUI) ?</strong></a></li>
