@@ -15,7 +15,7 @@
 
 <h4>But</h4>
 
-<p><code>Atomsk</code> est un programme en ligne de commandes conçu pour créer, manipuler, et convertir des systèmes atomiques. Il supporte de nombreux formats de fichiers, dont ceux de LAMMPS, VASP, Quantum Espresso, Atomeye, et xCrySDen (voir la <a href="./formats.html">liste des formats supportés</a>), ce qui facilite la conversion de fichiers pour les calculs <em>ab initio</em>, les simulations avec des potentiels inter-atomiques, ou la visualisation. De plus <code>atomsk</code> peut aussi effectuer des transformations simples sur les positions atomiques (grâce aux nombreuses <a href="./options.html">options</a>), comme créer des super-cellules, couper des plans cristallographiques, appliquer une contrainte, ou encore insérer des dislocations.</p>
+<p><code>Atomsk</code> est un programme en ligne de commandes conçu pour créer, manipuler, et convertir des systèmes atomiques, à des fins de calculs <em>ab initio</em>, de simulations avec des potentiels inter-atomiques, ou de visualisation. Il supporte de nombreux formats de fichiers, dont ceux de LAMMPS, VASP, Quantum Espresso, Atomeye, et xCrySDen (voir la <a href="./formats.html">liste des formats supportés</a>). De plus <code>atomsk</code> peut aussi effectuer des transformations simples sur les positions atomiques (grâce aux nombreuses <a href="./options.html">options</a>), comme créer des super-cellules, couper des plans cristallographiques, appliquer une contrainte, ou encore insérer des dislocations.</p>
 
 <p>Notez cependant que ce programme <em>n'a pas</em> pour vocation de préparer tous les fichiers, ni définir tous les paramètres de simulation, pour quelque utilisation particulière que ce soit. Dans la plupart des cas <code>atomsk</code> produira un fichier de positions atomiques qui ne sera qu'un brouillon, et qui devra être édité, modifié et/ou complété avant d'effectuer une simulation.</p>
 
